# RagSearch

./: README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
libs/ragsearch/: __init__.py  config.py  engine.py  hello_world.py  setup.py  utils.py  vector_db.py
libs/ragsearch/core/: __init__.py
libs/ragsearch/core/db/: __init__.py  base.py  duckdb_manager.py  schema_helper.py  sqlite_manager.py  vectordb_manager.py
libs/ragsearch/core/llm/: __init__.py  base.py  cohere_client.py  mock_llm.py  openai_client.py
libs/ragsearch/core/query/: __init__.py  base.py  query_engine.py  schema_parser.py  sql_translator.py
libs/ragsearch/core/ui/: __init__.py  app.py  index.html
libs/ragsearch/templates/: index.html
libs/tests/: test_chromadb_integration.py  test_hello_world.py  test_llm_manager.py
samples/: README.md  create_chromadb.py  demo_chromadb_real.py  demo_hello_world.py  test_chromadb_real.py
