[tool.poetry]
name = "ragsearch"
version = "0.1.0"
description = "ragsearch is a Python library for Retrieval-Augmented Generation (RAG), enabling configurable querying of both structured databases and unstructured data for tasks like recommendations and content generation."
authors = ["Mrutunjay Kinagi < mrutunjay.kinagi @ gmail.com >"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrutunjay-kinagi/ragsearch"
packages = [
    { include = "ragsearch", from = "libs" },
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "*"
pytest = "^8.3.3"
sphinx = "7.4.7"
sphinx-rtd-theme = "^3.0.2"
duckdb = "*"
pylint = "^3.3.1"
llama-index = "*"
langchain-community = "^0.3.8"
pymongo = "^4.10.1"
unstructured= "*"
pdfminer-six = "^20240706"
opencv-python = "^4.10.0.84"
pinecone = "^5.4.1"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
