[tool.poetry]
name = "ragsearch"
version = "0.1.3"
description = "ragserach is a Python library designed for building a Retrieval-Augmented Generation (RAG) application that enables natural language querying over structured data. This tool leverages embedding models and a vector database (FAISS) to provide an efficient and scalable search engine."
authors = ["Mrutunjay Kinagi < mrutunjay.kinagi @ gmail.com >"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrutunjay-kinagi/ragsearch"
packages = [
    { include = "ragsearch", from = "libs" },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
sphinx = "7.4.7"
sphinx-rtd-theme = "^3.0.2"
pylint = "^3.3.1"
flask = "^3.1.2"
cohere = "^5.17.0"
faiss-cpu = {version = "^1.12.0", python = ">=3.9,<3.15"}
pandas = "^2.2.3"
chromadb = "^1.0.20"
fastavro = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
